compiler/engineCompiler/firstPass/GorillaPP_grammar_fpParser.java
// $ANTLR 3.4 GorillaPP_grammar_fp.g 2014-06-02 02:04:30

  import java.util.Set;
  import java.util.HashSet;
  import java.util.Iterator;
  import java.io.*;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

@SuppressWarnings({"all", "warnings", "unchecked"})
public class GorillaPP_grammar_fpParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "BINARY_LITERAL", "BinaryDigit", "CHARACTER_LITERAL", "COMMENT", "DECIMAL_LITERAL", "DIGIT", "EscapeSequence", "HEX_LITERAL", "HexDigit", "ID", "INSTR_RETURN_TYPE", "IntegerTypeSuffix", "LETTER", "LINE_COMMENT", "MAGILLA_INSTR_NAME", "OCTAL_LITERAL", "OctalEscape", "SEMICOLON", "STRING_LITERAL", "WS", "'!'", "'!='", "'#define'", "'#pragma'", "'%'", "'%='", "'&&'", "'&'", "'&='", "'('", "')'", "'*'", "'*='", "'+'", "'++'", "'+='", "','", "'-'", "'--'", "'-='", "'.'", "'/'", "'/='", "':'", "'<'", "'<<'", "'<<='", "'<='", "'='", "'=='", "'>'", "'>='", "'>>'", "'>>='", "'?'", "'CONCURRENT_SAFE'", "'INPUT'", "'OFFLOAD'", "'OUTPUT'", "'PIPELINABLE'", "'['", "']'", "'^'", "'^='", "'bit_vector'", "'break'", "'case'", "'char'", "'continue'", "'default'", "'else'", "'enum'", "'finish'", "'if'", "'int'", "'long'", "'short'", "'struct {'", "'typedef'", "'unsigned'", "'{'", "'|'", "'|='", "'||'", "'}'", "'~'"
    };

    public static final int EOF=-1;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int T__50=50;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int T__55=55;
    public static final int T__56=56;
    public static final int T__57=57;
    public static final int T__58=58;
    public static final int T__59=59;
    public static final int T__60=60;
    public static final int T__61=61;
    public static final int T__62=62;
    public static final int T__63=63;
    public static final int T__64=64;
    public static final int T__65=65;
    public static final int T__66=66;
    public static final int T__67=67;
    public static final int T__68=68;
    public static final int T__69=69;
    public static final int T__70=70;
    public static final int T__71=71;
    public static final int T__72=72;
    public static final int T__73=73;
    public static final int T__74=74;
    public static final int T__75=75;
    public static final int T__76=76;
    public static final int T__77=77;
    public static final int T__78=78;
    public static final int T__79=79;
    public static final int T__80=80;
    public static final int T__81=81;
    public static final int T__82=82;
    public static final int T__83=83;
    public static final int T__84=84;
    public static final int T__85=85;
    public static final int T__86=86;
    public static final int T__87=87;
    public static final int T__88=88;
    public static final int T__89=89;
    public static final int BINARY_LITERAL=4;
    public static final int BinaryDigit=5;
    public static final int CHARACTER_LITERAL=6;
    public static final int COMMENT=7;
    public static final int DECIMAL_LITERAL=8;
    public static final int DIGIT=9;
    public static final int EscapeSequence=10;
    public static final int HEX_LITERAL=11;
    public static final int HexDigit=12;
    public static final int ID=13;
    public static final int INSTR_RETURN_TYPE=14;
    public static final int IntegerTypeSuffix=15;
    public static final int LETTER=16;
    public static final int LINE_COMMENT=17;
    public static final int MAGILLA_INSTR_NAME=18;
    public static final int OCTAL_LITERAL=19;
    public static final int OctalEscape=20;
    public static final int SEMICOLON=21;
    public static final int STRING_LITERAL=22;
    public static final int WS=23;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators

    protected static class Symbols_scope {
        FpCodeGen cg;
    }
    protected Stack Symbols_stack = new Stack();



    public GorillaPP_grammar_fpParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public GorillaPP_grammar_fpParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
        this.state.ruleMemo = new HashMap[200+1];
         

    }

    public String[] getTokenNames() { return GorillaPP_grammar_fpParser.tokenNames; }
    public String getGrammarFileName() { return "GorillaPP_grammar_fp.g"; }






    // $ANTLR start "translation_unit"
    // GorillaPP_grammar_fp.g:24:1: translation_unit : external_declaration ;
    public final void translation_unit() throws RecognitionException {
        Symbols_stack.push(new Symbols_scope());

        int translation_unit_StartIndex = input.index();


          ((Symbols_scope)Symbols_stack.peek()).cg =  new FpCodeGen();

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 1) ) { return ; }

            // GorillaPP_grammar_fp.g:29:5: ( external_declaration )
            // GorillaPP_grammar_fp.g:29:7: external_declaration
            {
            pushFollow(FOLLOW_external_declaration_in_translation_unit70);
            external_declaration();

            state._fsp--;
            if (state.failed) return ;

            if ( state.backtracking==0 ) {((Symbols_scope)Symbols_stack.peek()).cg.writeOutputs();}

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 1, translation_unit_StartIndex); }

            Symbols_stack.pop();

        }
        return ;
    }
    // $ANTLR end "translation_unit"



    // $ANTLR start "external_declaration"
    // GorillaPP_grammar_fp.g:32:1: external_declaration : ( ( ( type_definition | define )* ) | ( in_pragma out_pragma ( off_pragma )* ( other_pragma )* ( global_declaration )* ( magilla_instr )+ ) );
    public final void external_declaration() throws RecognitionException {
        int external_declaration_StartIndex = input.index();

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 2) ) { return ; }

            // GorillaPP_grammar_fp.g:33:3: ( ( ( type_definition | define )* ) | ( in_pragma out_pragma ( off_pragma )* ( other_pragma )* ( global_declaration )* ( magilla_instr )+ ) )
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==EOF||LA6_0==26||LA6_0==82) ) {
                alt6=1;
            }
            else if ( (LA6_0==27) ) {
                alt6=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return ;}
                NoViableAltException nvae =
                    new NoViableAltException("", 6, 0, input);

                throw nvae;

            }
            switch (alt6) {
                case 1 :
                    // GorillaPP_grammar_fp.g:33:5: ( ( type_definition | define )* )
                    {
                    // GorillaPP_grammar_fp.g:33:5: ( ( type_definition | define )* )
                    // GorillaPP_grammar_fp.g:33:6: ( type_definition | define )*
                    {
                    if ( state.backtracking==0 ) {((Symbols_scope)Symbols_stack.peek()).cg.setIsHeaderFile();}

                    // GorillaPP_grammar_fp.g:34:5: ( type_definition | define )*
                    loop1:
                    do {
                        int alt1=3;
                        int LA1_0 = input.LA(1);

                        if ( (LA1_0==82) ) {
                            alt1=1;
                        }
                        else if ( (LA1_0==26) ) {
                            alt1=2;
                        }


                        switch (alt1) {
                    	case 1 :
                    	    // GorillaPP_grammar_fp.g:34:6: type_definition
                    	    {
                    	    pushFollow(FOLLOW_type_definition_in_external_declaration92);
                    	    type_definition();

                    	    state._fsp--;
                    	    if (state.failed) return ;

                    	    }
                    	    break;
                    	case 2 :
                    	    // GorillaPP_grammar_fp.g:34:22: define
                    	    {
                    	    pushFollow(FOLLOW_define_in_external_declaration94);
                    	    define();

                    	    state._fsp--;
                    	    if (state.failed) return ;

                    	    }
                    	    break;

                    	default :
                    	    break loop1;
                        }
                    } while (true);


                    }


                    if ( state.backtracking==0 ) {((Symbols_scope)Symbols_stack.peek()).cg.handlePrePragmas();}

                    }
                    break;
                case 2 :
                    // GorillaPP_grammar_fp.g:36:5: ( in_pragma out_pragma ( off_pragma )* ( other_pragma )* ( global_declaration )* ( magilla_instr )+ )
                    {
                    // GorillaPP_grammar_fp.g:36:5: ( in_pragma out_pragma ( off_pragma )* ( other_pragma )* ( global_declaration )* ( magilla_instr )+ )
                    // GorillaPP_grammar_fp.g:36:6: in_pragma out_pragma ( off_pragma )* ( other_pragma )* ( global_declaration )* ( magilla_instr )+
                    {
                    pushFollow(FOLLOW_in_pragma_in_external_declaration113);
                    in_pragma();

                    state._fsp--;
                    if (state.failed) return ;

                    pushFollow(FOLLOW_out_pragma_in_external_declaration115);
                    out_pragma();

                    state._fsp--;
                    if (state.failed) return ;

                    // GorillaPP_grammar_fp.g:37:5: ( off_pragma )*
                    loop2:
                    do {
                        int alt2=2;
                        int LA2_0 = input.LA(1);

                        if ( (LA2_0==27) ) {
                            int LA2_1 = input.LA(2);

                            if ( (LA2_1==61) ) {
                                alt2=1;
                            }


                        }


                        switch (alt2) {
                    	case 1 :
                    	    // GorillaPP_grammar_fp.g:37:5: off_pragma
                    	    {
                    	    pushFollow(FOLLOW_off_pragma_in_external_declaration122);
                    	    off_pragma();

                    	    state._fsp--;
                    	    if (state.failed) return ;

                    	    }
                    	    break;

                    	default :
                    	    break loop2;
                        }
                    } while (true);


                    // GorillaPP_grammar_fp.g:37:17: ( other_pragma )*
                    loop3:
                    do {
                        int alt3=2;
                        int LA3_0 = input.LA(1);

                        if ( (LA3_0==27) ) {
                            alt3=1;
                        }


                        switch (alt3) {
                    	case 1 :
                    	    // GorillaPP_grammar_fp.g:37:17: other_pragma
                    	    {
                    	    pushFollow(FOLLOW_other_pragma_in_external_declaration125);
                    	    other_pragma();

                    	    state._fsp--;
                    	    if (state.failed) return ;

                    	    }
                    	    break;

                    	default :
                    	    break loop3;
                        }
                    } while (true);


                    if ( state.backtracking==0 ) {((Symbols_scope)Symbols_stack.peek()).cg.handlePostPragmas();}

                    // GorillaPP_grammar_fp.g:39:5: ( global_declaration )*
                    loop4:
                    do {
                        int alt4=2;
                        int LA4_0 = input.LA(1);

                        if ( (LA4_0==ID||LA4_0==26||LA4_0==68||LA4_0==71||LA4_0==75||(LA4_0 >= 78 && LA4_0 <= 80)||LA4_0==83) ) {
                            alt4=1;
                        }


                        switch (alt4) {
                    	case 1 :
                    	    // GorillaPP_grammar_fp.g:39:5: global_declaration
                    	    {
                    	    pushFollow(FOLLOW_global_declaration_in_external_declaration139);
                    	    global_declaration();

                    	    state._fsp--;
                    	    if (state.failed) return ;

                    	    }
                    	    break;

                    	default :
                    	    break loop4;
                        }
                    } while (true);


                    if ( state.backtracking==0 ) {((Symbols_scope)Symbols_stack.peek()).cg.handlePreInstrs();}

                    // GorillaPP_grammar_fp.g:40:5: ( magilla_instr )+
                    int cnt5=0;
                    loop5:
                    do {
                        int alt5=2;
                        int LA5_0 = input.LA(1);

                        if ( (LA5_0==MAGILLA_INSTR_NAME) ) {
                            alt5=1;
                        }


                        switch (alt5) {
                    	case 1 :
                    	    // GorillaPP_grammar_fp.g:40:5: magilla_instr
                    	    {
                    	    pushFollow(FOLLOW_magilla_instr_in_external_declaration148);
                    	    magilla_instr();

                    	    state._fsp--;
                    	    if (state.failed) return ;

                    	    }
                    	    break;

                    	default :
                    	    if ( cnt5 >= 1 ) break loop5;
                    	    if (state.backtracking>0) {state.failed=true; return ;}
                                EarlyExitException eee =
                                    new EarlyExitException(5, input);
                                throw eee;
                        }
                        cnt5++;
                    } while (true);


                    if ( state.backtracking==0 ) {((Symbols_scope)Symbols_stack.peek()).cg.handlePostInstrs();}

                    }


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 2, external_declaration_StartIndex); }

        }
        return ;
    }
    // $ANTLR end "external_declaration"



    // $ANTLR start "global_declaration"
    // GorillaPP_grammar_fp.g:43:1: global_declaration : ( define | global_variable_definition );
    public final void global_declaration() throws RecognitionException {
        int global_declaration_StartIndex = input.index();

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 3) ) { return ; }

            // GorillaPP_grammar_fp.g:44:5: ( define | global_variable_definition )
            int alt7=2;
            int LA7_0 = input.LA(1);

            if ( (LA7_0==26) ) {
                alt7=1;
            }
            else if ( (LA7_0==ID||LA7_0==68||LA7_0==71||LA7_0==75||(LA7_0 >= 78 && LA7_0 <= 80)||LA7_0==83) ) {
                alt7=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return ;}
                NoViableAltException nvae =
                    new NoViableAltException("", 7, 0, input);

                throw nvae;

            }
            switch (alt7) {
                case 1 :
                    // GorillaPP_grammar_fp.g:44:8: define
                    {
                    pushFollow(FOLLOW_define_in_global_declaration167);
                    define();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;
                case 2 :
                    // GorillaPP_grammar_fp.g:44:17: global_variable_definition
                    {
                    pushFollow(FOLLOW_global_variable_definition_in_global_declaration171);
                    global_variable_definition();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 3, global_declaration_StartIndex); }

        }
        return ;
    }
    // $ANTLR end "global_declaration"



    // $ANTLR start "magilla_instr"
    // GorillaPP_grammar_fp.g:47:1: magilla_instr : MAGILLA_INSTR_NAME ( '(' ')' ) '{' instr_body '}' ;
    public final void magilla_instr() throws RecognitionException {
        int magilla_instr_StartIndex = input.index();

        Token MAGILLA_INSTR_NAME1=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 4) ) { return ; }

            // GorillaPP_grammar_fp.g:48:5: ( MAGILLA_INSTR_NAME ( '(' ')' ) '{' instr_body '}' )
            // GorillaPP_grammar_fp.g:48:7: MAGILLA_INSTR_NAME ( '(' ')' ) '{' instr_body '}'
            {
            MAGILLA_INSTR_NAME1=(Token)match(input,MAGILLA_INSTR_NAME,FOLLOW_MAGILLA_INSTR_NAME_in_magilla_instr194); if (state.failed) return ;

            if ( state.backtracking==0 ) {((Symbols_scope)Symbols_stack.peek()).cg.handlePreInstrBody((MAGILLA_INSTR_NAME1!=null?MAGILLA_INSTR_NAME1.getText():null));}

            // GorillaPP_grammar_fp.g:49:7: ( '(' ')' )
            // GorillaPP_grammar_fp.g:49:8: '(' ')'
            {
            match(input,33,FOLLOW_33_in_magilla_instr205); if (state.failed) return ;

            match(input,34,FOLLOW_34_in_magilla_instr206); if (state.failed) return ;

            }


            match(input,84,FOLLOW_84_in_magilla_instr209); if (state.failed) return ;

            pushFollow(FOLLOW_instr_body_in_magilla_instr211);
            instr_body();

            state._fsp--;
            if (state.failed) return ;

            match(input,88,FOLLOW_88_in_magilla_instr212); if (state.failed) return ;

            if ( state.backtracking==0 ) {
                   ((Symbols_scope)Symbols_stack.peek()).cg.
                    handlePostInstrBody((MAGILLA_INSTR_NAME1!=null?MAGILLA_INSTR_NAME1.getText():null));
                  }

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 4, magilla_instr_StartIndex); }

        }
        return ;
    }
    // $ANTLR end "magilla_instr"



    // $ANTLR start "instr_body"
    // GorillaPP_grammar_fp.g:55:1: instr_body : ( local_variable_definition )* ( statement )* ( offload_statement )* ( statement )* ( finish_statement )? ;
    public final void instr_body() throws RecognitionException {
        int instr_body_StartIndex = input.index();

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 5) ) { return ; }

            // GorillaPP_grammar_fp.g:56:5: ( ( local_variable_definition )* ( statement )* ( offload_statement )* ( statement )* ( finish_statement )? )
            // GorillaPP_grammar_fp.g:56:7: ( local_variable_definition )* ( statement )* ( offload_statement )* ( statement )* ( finish_statement )?
            {
            // GorillaPP_grammar_fp.g:56:7: ( local_variable_definition )*
            loop8:
            do {
                int alt8=2;
                int LA8_0 = input.LA(1);

                if ( (LA8_0==ID) ) {
                    int LA8_1 = input.LA(2);

                    if ( (LA8_1==ID) ) {
                        alt8=1;
                    }


                }
                else if ( (LA8_0==68||LA8_0==71||LA8_0==75||(LA8_0 >= 78 && LA8_0 <= 80)||LA8_0==83) ) {
                    alt8=1;
                }

